# schemaguard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/schemaguard/: cli.py  django_analyzer.py  graphql_analyzer.py  ignore_rules.py  migration_analyzer.py  model_analyzer.py  prisma_analyzer.py  reporter.py  scanner.py  schema_file_analyzer.py
tests/: test_schemaguard.py
