[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schema-guardian"
version = "0.1.0"
description = "Detect breaking schema changes in SQL migrations, data models, and schema files before they reach production"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Tahiram32", email = "tahiramuhammad53@gmail.com"}]
keywords = ["schema", "migration", "database", "sql", "pydantic", "protobuf", "avro", "github-action", "ci", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Database",
]

[project.urls]
Homepage = "https://github.com/Tahiram32/schemaguard"
Repository = "https://github.com/Tahiram32/schemaguard"
Issues = "https://github.com/Tahiram32/schemaguard/issues"

[project.scripts]
schemaguard = "schemaguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
